Introduced getter/setter methods for the most important public fields, in order to be able to toggle the "we have to save index.xml"-flag in a central and more intelligent way. Also had to tweak some of the filter routines, so that they don't alter filter flags unnecessarily.